2025-03-23 Gabriele Gorla <gorlik@yahoo.com>
  	* device/lib/mos6502/_mulint.s:
  	  Reimplement mulint.

2025-03-29 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCC.y:
	  Reduce code duplication in kr_declaration.

2025-03-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Document current f8 calling convention.

2025-03-23 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_strcmp.s,
  	  device/lib/mos6502/_strrchr.s:
  	  Small strcmp and strrchr in fixes.
   	* device/lib/_fsadd.c:
   	  Remove redundant sign check.
  	* device/lib/mos6502/_fsadd.s,
  	  device/lib/mos6502/_fssub.s:
  	  Implement fsadd and fssub in assembly.
  	* src/mos6502/gen.c:
  	  Restore regs from DPTR in genPointerGet.
  	  Enable XA=A+op optimization in genPlus.
  	* src/mos6502/peeph.def:
  	  Add several new rules.

2025-03-22 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Improve genCmpEQorNE.
	  Implement DPTR tracking.
  	* device/lib/mos6502/strlen.s,
  	  device/lib/mos6502/_strlen.s:
  	  Fix incorrect file name.
  	* device/lib/mos6502/_strchr.s,
  	  device/lib/mos6502/_strrchr.s:
  	  Implement strchr and strrchr in assembly.

2025-03-21 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Improve register tracking.

2025-03-16 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c,
	  src/mos6502/gen.h,
	  src/mos6502/ralloc.c,
	  src/mos6502/ralloc.h,
	  src/mos6502/ralloc2.cc:
	  Always use freeReg, useReg and dirtyReg.
	  Implement dirtyAllRegs and freeAllRegs.

2025-03-16 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h:
	  Add support for storage class specifiers in compound literals (C23, RFE #332).

2025-03-15 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCC.y:
	  Change parameter_declaration and type_name productions to match the C standard.
	* support/regression/get_ticks.py:
	  Address a deprecation warning.
